--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,4 @@
 body {
-  margin: 0px;
-  padding: 0px;
   background-color: #f1f1f1;
 }
 
@@ -80,8 +78,10 @@ body {
 
 #header {
   width: 100%;
-  height: auto;
+  height: 40vw;
+  object-fit: cover;
   filter: brightness(40%);
+  margin-bottom: -5px;
 }
 
 #title {
@@ -122,7 +122,7 @@ body {
 }
 
 .point-title {
-  font-size: 40px;
+  font-size: 6vw;
   color: #626262;
   border-right-width: 2px;
   padding: 5%;
@@ -133,9 +133,9 @@ body {
 }
 
 .point-detail {
-  font-size: 20px;
+  font-size: 3vw;
   color: #626262;
-  padding: 20px;
+  padding: 2vw;
   text-align: center;
   width: 46%;
   display: inline-block;
@@ -172,12 +172,12 @@ body {
 .button {
   background-color: #c7c7c7;
   color: #000000;
-  padding: 20px;
-  margin: 20px;
+  padding: 3vw;
+  margin: 3vw;
   border-radius: 10px;
   width: 50%;
-  height: 20%;
-  font-size: 30px;
+  height: 3vw;
+  font-size: 3vw;
   transition: background-color 0.2s ease-in;
   -webkit-user-select: none;
   -ms-user-select: none;
